--- a/vagrant/oracle-xe/Vagrantfile
+++ b/vagrant/oracle-xe/Vagrantfile
@@ -8,7 +8,7 @@
 Vagrant.configure(2) do |config|
   config.vm.box = "ubuntu/trusty64"
 
-  # config.vm.network "forwarded_port", guest: 80, host: 8080
+  config.vm.network "forwarded_port", guest: 1521, host: 1521
   # config.vm.network "private_network", ip: "192.168.33.10"
   # config.vm.network "public_network"
 
