--- a/vagrant/oracle-xe/Vagrantfile
+++ b/vagrant/oracle-xe/Vagrantfile
@@ -8,7 +8,7 @@
 Vagrant.configure(2) do |config|
   config.vm.box = "ubuntu/trusty64"
 
-  config.vm.network "forwarded_port", guest: 1521, host: 1521
+  # config.vm.network "forwarded_port", guest: 1521, host: 1521
   # config.vm.network "private_network", ip: "192.168.33.10"
   # config.vm.network "public_network"
 
@@ -16,7 +16,7 @@ Vagrant.configure(2) do |config|
 
    config.vm.provider "virtualbox" do |vb|
      vb.memory = "2048"
-     vb.cpus = 2
+     vb.cpus = 1
    end
   config.vm.provision "shell", inline: <<-SHELL
     /vagrant/install.sh
