--- a/docker/rabbitmq-ssl/Dockerfile
+++ b/docker/rabbitmq-ssl/Dockerfile
@@ -13,12 +13,17 @@ RUN apt-get update && \
 RUN mkdir /etc/rabbitmq/keys
 ADD rabbitmq.config /etc/rabbitmq/rabbitmq.config
 ADD ca.crt rabbitmq.crt rabbitmq.key /etc/rabbitmq/keys/
+RUN chown -R root:rabbitmq /etc/rabbitmq/keys && \
+    chmod 0750 /etc/rabbitmq/keys && \
+    chmod 0640 /etc/rabbitmq/keys/*
 
 VOLUME /var/lib/rabbitmq
+VOLUME /var/log/rabbotmq
 EXPOSE 5672 5671 15672
 ENV ADMIN_PASSWORD ${ADMIN_PASSWORD}
 
 CMD chown rabbitmq:rabbitmq /var/lib/rabbitmq && \
+    chown rabbitmq:rabbitmq /var/log/rabbitmq && \
     service rabbitmq-server start && \
     rabbitmqctl add_user admin $ADMIN_PASSWORD && \
     rabbitmqctl set_user_tags admin administrator && \
